[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/battleMode/musicAttackController.gd" type="Script" id=1]
[ext_resource path="res://scenes/battleMode/MusicHandler.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/battleMode/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/battleMode/gridAttack.tscn" type="PackedScene" id=4]

[node name="musicAttackController" type="Node"]
script = ExtResource( 1 )
bulletPackedScene = ExtResource( 3 )

[node name="MusicHandler" parent="." instance=ExtResource( 2 )]

[node name="gridAttack" parent="." instance=ExtResource( 4 )]
position = Vector2( 72, 68 )

[connection signal="metronome" from="MusicHandler" to="." method="_on_MusicHandler_metronome"]
[connection signal="track1" from="MusicHandler" to="." method="on_track_1"]
[connection signal="track2" from="MusicHandler" to="." method="on_track_2"]
[connection signal="track3" from="MusicHandler" to="." method="on_track_3"]
